GearsetPOC/force-app/main/default/objects/Service_Integration_Log__c/Service_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Service Integration Log</label>
    <nameField>
        <displayFormat>SIL-{0000}</displayFormat>
        <label>Service Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>