GearsetPOC/force-app/main/default/objects/Service_Integration_Log__c/fields/Is_Actual__c.field-meta.xml
<CustomField>
    <fullName>Is_Actual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Actual</label>
    <type>Checkbox</type>
</CustomField>