GearsetPOC/force-app/main/default/objects/Service_Integration_Log__c/fields/Number_of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attempts__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>