GearsetPOC/force-app/main/default/objects/Service_Integration_Log__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>