GearsetPOC/force-app/main/default/objects/Service_Integration_Log__c/fields/Sync_Operation__c.field-meta.xml
<CustomField>
    <fullName>Sync_Operation__c</fullName>
    <label>Sync Operation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>